# ChangeLog for media-libs/libmikmod
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libmikmod/ChangeLog,v 1.12 2003/11/04 09:45:58 kumba Exp $


*libmikmod-3.1.10-r1 (24 May 2003)

  04 Nov 2003; Joshua Kinard <kumba@gentoo.org> libmikmod-3.1.10-r1.ebuild:
  Added ~mips to KEYWORDS

  26 May 2003; Chuck Brewer <killian@gentoo.org> libmikmod-3.1.10-r1.ebuild:
  Fixed filter-flags typo.

  24 May 2003; root <root@gentoo.org> libmikmod-3.1.10-r1.ebuild:
  Filtering -Os.
  
  For details see: http://bugs.gentoo.org/show_bug.cgi?id=14814

  29 Apr 2003; Aron Griffis <agriffis@gentoo.org> libmikmod-3.1.10.ebuild:
  Mark stable on alpha

  16 Jan 2003; Will Woods <wwoods@gentoo.org> : added ~alpha keyword

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*libmikmod-3.1.10 (11 Feb 2002)

  28 Feb 2003; Will Woods <wwoods@gentoo.org> libmikmod-3.1.10.ebuild:
  Added gnuconfig hack for Alpha systems

  11 Feb 2002; F.Meyndert <m0rpheus@gentoo.org> libmikmod-3.1.10.ebuild :

  Added ebuild for the new libmikmod-3.1.10 thnx too 
  William A. McArthur, Jr <leknor@leknor.com>

*libmikmod-3.1.9-r3 (11 Feb 2002)

  11 Feb 2002; F.Meyndert <m0rpheus@gentoo.org> libmikmod-3.1.9-r3.ebuild :

  Fixed death link in ebuild, too new libmikmod homepage. Fix bug #641
  thnx xaxeusx@hotmail.com for the report
	
*libmikmod-3.1.9-r3 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.