@@ -1,5 +1,5 @@
-MD5 792562eba3940bc1f587e737d0c0684c libmikmod-3.1.10.ebuild 1107
-MD5 0fa8dbbe149cb72207d044983b736987 libmikmod-3.1.10-r1.ebuild 1143
-MD5 becd5f86c600090d2903445c64cc3e74 ChangeLog 1883
-MD5 06993a8c20b2a18200ffe4fe4a339b21 files/digest-libmikmod-3.1.10-r1 68
+MD5 b407dd947938a49fca3c7d8021297a7f ChangeLog 2024
+MD5 91645ded0bba48fa9b674798de6cd183 libmikmod-3.1.10-r1.ebuild 1151
+MD5 f9233eb8e1761a014e5d9d4e02ef2520 libmikmod-3.1.10.ebuild 1114
 MD5 06993a8c20b2a18200ffe4fe4a339b21 files/digest-libmikmod-3.1.10 68
+MD5 06993a8c20b2a18200ffe4fe4a339b21 files/digest-libmikmod-3.1.10-r1 68
