@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmikmod/Attic/libmikmod-3.1.10.ebuild,v 1.15 2003/07/18 21:55:44 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmikmod/Attic/libmikmod-3.1.10.ebuild,v 1.16 2003/11/23 20:36:43 mr_bones_ Exp $
 inherit gnuconfig
 
 IUSE="oss esd alsa"
@@ -8,7 +8,7 @@ IUSE="oss esd alsa"
 S=${WORKDIR}/${P}
 DESCRIPTION="A library to play a wide range of module formats"
 SRC_URI="http://www.mikmod.org/files/libmikmod/${P}.tar.gz"
-HOMEPAGE="http://www.mikmod.org/"
+HOMEPAGE="http://mikmod.raphnet.net/"
 
 DEPEND=">=media-libs/audiofile-0.2.3
 	alsa? ( >=media-libs/alsa-lib-0.5.9 )
