@@ -1,6 +1,4 @@
-MD5 a9984c0c611593f62cb9385f3466a01a ChangeLog 598
-MD5 3fd6f1c4b7d36296304435f2a4d2b86f mikmod-3.1.6.ebuild 567
-MD5 08007a2be209fc50172b7a8662dac3ad mikmod-3.1.6a.ebuild 750
-MD5 026fa9d8ce7fd448b1b765718ab8fd2c files/digest-mikmod-3.1.6 64
+MD5 2d646e8123823dc5ae232b5384780373 ChangeLog 732
+MD5 e2edfb772dfb1af089d799a7217456ec mikmod-3.1.6a.ebuild 760
 MD5 3691ea094d354f67619abf35f5c69d98 files/digest-mikmod-3.1.6a 128
 MD5 4543887d2f464e8562d5f5969c80fd6c files/mikmod-3.1.6-security.patch 2314
