@@ -1,10 +1,10 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mikmod/Attic/mikmod-3.1.6a.ebuild,v 1.4 2003/09/21 03:18:16 jje Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mikmod/Attic/mikmod-3.1.6a.ebuild,v 1.5 2003/11/23 20:34:01 mr_bones_ Exp $
 
 MY_P=${PN}-${PV/a}
 DESCRIPTION="MikMod is a console MOD-Player based on libmikmod"
-HOMEPAGE="http://www.mikmod.org/"
+HOMEPAGE="http://mikmod.raphnet.net/"
 LICENSE="GPL-2"
 SRC_URI="mirror://gentoo/${MY_P}.tar.gz
 	mirror://gentoo/patch-${MY_P}-a"
