@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/mikmod
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mikmod/ChangeLog,v 1.5 2003/09/21 03:18:16 jje Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mikmod/ChangeLog,v 1.6 2003/11/23 20:34:01 mr_bones_ Exp $
+
+  23 Nov 2003; Michael Sterrett <mr_bones_@gentoo.org> mikmod-3.1.6.ebuild,
+  mikmod-3.1.6a.ebuild:
+  fix HOMEPAGE (bug 34204)
 
   21 Sep 2003; jje <jje@gentoo.org> mikmod-3.1.6a.ebuild:
   SRC_URI update, now hosted on gentoo.
