@@ -1,7 +1,10 @@
 # ChangeLog for media-libs/libmikmod
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmikmod/ChangeLog,v 1.12 2003/11/04 09:45:58 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmikmod/ChangeLog,v 1.13 2003/11/23 20:36:43 mr_bones_ Exp $
 
+  23 Nov 2003; Michael Sterrett <mr_bones_@gentoo.org>
+  libmikmod-3.1.10-r1.ebuild, libmikmod-3.1.10.ebuild:
+  fix HOMEPAGE (bug 34204)
 
 *libmikmod-3.1.10-r1 (24 May 2003)
 
